bindings: Set function name for attribute accessors

This aligns the behavior with the current Web IDL specification as well as
Firefox and Safari.

Bug: 878074
Change-Id: Ia862c1d0d8319fb78726817b69f9151e5fb500fd
Reviewed-on: https://chromium-review.googlesource.com/1191727
Commit-Queue: Timothy Gu <timothygu@chromium.org>
Reviewed-by: Hitoshi Yoshida <peria@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588544}
Former-commit-id: 44f5ffe622f37f67761e1d2ad387cb53f183be9b