third_party/blink/renderer/bindings/core/v8/v8_dom_configuration.cc
@@ -31,6 +31,7 @@
 #include "third_party/blink/renderer/platform/bindings/v8_object_constructor.h"
 #include "third_party/blink/renderer/platform/bindings/v8_per_context_data.h"
 #include "third_party/blink/renderer/platform/instrumentation/tracing/trace_event.h"
+#include "third_party/blink/renderer/platform/wtf/text/string_builder.h"
 
 namespace blink {
 
@@ -155,6 +156,11 @@ void InstallAttributeInternal(
     NOTREACHED();
 }
 
+enum class AccessorType {
+  Getter,
+  Setter,
+};
+
 template <class FunctionOrTemplate>
 v8::Local<FunctionOrTemplate> CreateAccessorFunctionOrTemplate(
     v8::Isolate*,
@@ -162,7 +168,8 @@ v8::Local<FunctionOrTemplate> CreateAccessorFunctionOrTemplate(
     V8PrivateProperty::CachedAccessorSymbol,
     v8::Local<v8::Value> data,
     v8::Local<v8::Signature>,
-    int length,
+    const char* name,
+    AccessorType,
     v8::SideEffectType side_effect_type = v8::SideEffectType::kHasSideEffect);
 
 template <>
@@ -173,10 +180,20 @@ CreateAccessorFunctionOrTemplate<v8::FunctionTemplate>(
     V8PrivateProperty::CachedAccessorSymbol cached_property_key,
     v8::Local<v8::Value> data,
     v8::Local<v8::Signature> signature,
-    int length,
+    const char* name,
+    AccessorType type,
     v8::SideEffectType side_effect_type) {
   v8::Local<v8::FunctionTemplate> function_template;
   if (callback) {
+    // https://heycam.github.io/webidl/#dfn-attribute-getter has:
+    //
+    //  5. Perform ! SetFunctionLength(|F|, 0).
+    //
+    // https://heycam.github.io/webidl/#dfn-attribute-setter has:
+    //
+    //  7. Perform ! SetFunctionLength(|F|, 1).
+    int length = type == AccessorType::Getter ? 0 : 1;
+
     if (cached_property_key != V8PrivateProperty::kNoCachedAccessor) {
       function_template = v8::FunctionTemplate::NewWithCache(
           isolate, callback,
@@ -192,6 +209,28 @@ CreateAccessorFunctionOrTemplate<v8::FunctionTemplate>(
     if (!function_template.IsEmpty()) {
       function_template->RemovePrototype();
       function_template->SetAcceptAnyReceiver(false);
+
+      // https://heycam.github.io/webidl/#dfn-attribute-getter has:
+      //
+      //  3. Let |name| be the string "get " prepended to |attribute|’s
+      //  identifier.
+      //
+      //  4. Perform ! SetFunctionName(|F|, |name|).
+      //
+      // https://heycam.github.io/webidl/#dfn-attribute-setter has:
+      //
+      //  5. Let |name| be the string "set " prepended to |id|.
+      //
+      //  6. Perform ! SetFunctionName(|F|, |name|).
+      //
+      // SetClassName on a FunctionTemplate that doesn't have a prototype just
+      // sets the .name property of the generated function.
+      WTF::StringBuilder full_name_builder;
+      full_name_builder.Append(type == AccessorType::Getter ? "get " : "set ",
+                               4);
+      full_name_builder.Append(name);
+      function_template->SetClassName(
+          V8AtomicString(isolate, full_name_builder.ToString()));
     }
   }
   return function_template;
@@ -204,7 +243,8 @@ v8::Local<v8::Function> CreateAccessorFunctionOrTemplate<v8::Function>(
     V8PrivateProperty::CachedAccessorSymbol,
     v8::Local<v8::Value> data,
     v8::Local<v8::Signature> signature,
-    int length,
+    const char* name,
+    AccessorType type,
     v8::SideEffectType side_effect_type) {
   if (!callback)
     return v8::Local<v8::Function>();
@@ -212,7 +252,7 @@ v8::Local<v8::Function> CreateAccessorFunctionOrTemplate<v8::Function>(
   v8::Local<v8::FunctionTemplate> function_template =
       CreateAccessorFunctionOrTemplate<v8::FunctionTemplate>(
           isolate, callback, V8PrivateProperty::kNoCachedAccessor, data,
-          signature, length, side_effect_type);
+          signature, name, type, side_effect_type);
   if (function_template.IsEmpty())
     return v8::Local<v8::Function>();
 
@@ -257,7 +297,7 @@ void InstallAccessorInternal(
   if (!WorldConfigurationApplies(config, world))
     return;
 
-  v8::Local<v8::Name> name = V8AtomicString(isolate, config.name);
+  v8::Local<v8::String> name = V8AtomicString(isolate, config.name);
   v8::FunctionCallback getter_callback = config.getter;
   v8::FunctionCallback setter_callback = config.setter;
   auto cached_property_key = V8PrivateProperty::kNoCachedAccessor;
@@ -285,11 +325,13 @@ void InstallAccessorInternal(
     v8::Local<FunctionOrTemplate> getter =
         CreateAccessorFunctionOrTemplate<FunctionOrTemplate>(
             isolate, getter_callback, cached_property_key,
-            v8::Local<v8::Value>(), signature, 0, getter_side_effect_type);
+            v8::Local<v8::Value>(), signature, config.name,
+            AccessorType::Getter, getter_side_effect_type);
     v8::Local<FunctionOrTemplate> setter =
         CreateAccessorFunctionOrTemplate<FunctionOrTemplate>(
             isolate, setter_callback, V8PrivateProperty::kNoCachedAccessor,
-            v8::Local<v8::Value>(), signature, 1);
+            v8::Local<v8::Value>(), signature, config.name,
+            AccessorType::Setter);
     if (location & V8DOMConfiguration::kOnInstance &&
         !IsObjectAndEmpty(instance_or_template)) {
       instance_or_template->SetAccessorProperty(
@@ -311,12 +353,13 @@ void InstallAccessorInternal(
     v8::Local<FunctionOrTemplate> getter =
         CreateAccessorFunctionOrTemplate<FunctionOrTemplate>(
             isolate, getter_callback, V8PrivateProperty::kNoCachedAccessor,
-            v8::Local<v8::Value>(), v8::Local<v8::Signature>(), 0,
-            getter_side_effect_type);
+            v8::Local<v8::Value>(), v8::Local<v8::Signature>(), config.name,
+            AccessorType::Getter, getter_side_effect_type);
     v8::Local<FunctionOrTemplate> setter =
         CreateAccessorFunctionOrTemplate<FunctionOrTemplate>(
             isolate, setter_callback, V8PrivateProperty::kNoCachedAccessor,
-            v8::Local<v8::Value>(), v8::Local<v8::Signature>(), 1);
+            v8::Local<v8::Value>(), v8::Local<v8::Signature>(), config.name,
+            AccessorType::Setter);
     interface_or_template->SetAccessorProperty(
         name, getter, setter,
         static_cast<v8::PropertyAttribute>(config.attribute));
